--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
+    "react-native-maps": "0.29.4",
+    "react-native-safe-area-context": "^4.1.2",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
